# finm-python

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
assignments/: hw1.md  hw2.md  hw3.md  hw5.md  hw7.md
data/raw/: market_data.csv
docs/: OUTLINE.md  hw1.md  hw10.md  hw2.md  hw3.md  hw5.md  hw6.md  hw7.md  hw8.md  hw9.md
notebooks/: session2.ipynb  session5.ipynb
scripts/hw1/: data_generator.py
src/backtest-engine/hw1/: reporting.py  strategies.py
src/backtest-engine/hw2/: benchmark_strategy.py  strategies.py
src/backtest-engine/hw3/: example.py
src/finm_python/: __init__.py
src/finm_python/hw1/: __init__.py  main.py
src/finm_python/hw2/: __init__.py  main.py
src/finm_python/hw3/: __init__.py  main.py
src/finm_python/hw6/: PATTERN_DIAGRAMS.md  README.md  __init__.py  analytics.py  data_loader.py  design_report.md  engine.py  main.py  models.py  output.xml  reporting.py  tmp.py
src/finm_python/hw7/: README.md  __init__.py  data_loader.py  main.py  metrics.py  parallel.py  performance_report.md  portfolio.py  reporting.py
src/finm_python/hw8/: README.md  __init__.py  gateway.py  main.py  order_manager.py  orderbook.py  performance_report.md  shared_memory_utils.py  strategy.py
src/finm_python/hw9/: README.md  __init__.py  coverage_report.md  events.json  fix_parser.py  logger.py  main.py  order.py  risk_engine.py
src/pyquant/: __init__.py
src/pyquant/hw1/: engine.py  main.py  models.py  reporting.py  strategies.py
src/pyquant/hw2/: benchmark_strategy.py  engine.py  main.py  models.py  (+2 more)
src/trading-system/: utils.py
(+112 files in other folders)
