[project]
name = "pyquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]

[project.scripts]
pyquant = "pyquant:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
